Fix alignment in header and content-1

--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@ body {
 ul {
     list-style-type: none;
     display: flex;
-    margin-left: 100px;
+    margin-left: 80px;
     gap: 10px;
-    font-size: 18px;
+    font-size: 20px;
     color: #E5E7EB;
 }
 
@@ -19,14 +19,15 @@ ul {
     justify-content: center;
     background-color: #1F2937;
     color: white;
-    padding: 40px;
-    /*justify-content: space-around; */
+    padding-top: 10px;
+    padding-bottom: 40px;
 }
 
 .logo {
     margin-top: 10px;
-    margin-right: 250px;
+    margin-right: 400px;
     font-size: 24px;
+    color: #F9FAF8;
 }
 
 .content-1 {
@@ -36,6 +37,7 @@ ul {
     padding: 50px;
     flex: 1;
     background-color: #1F2937;
+    padding-bottom: 120px;
 }
 
 .info {
@@ -43,7 +45,7 @@ ul {
     flex-direction: column;
     width: 300px;
     gap: 10px;
-    margin-right: 200px;
+    margin-right: 190px;
 }
 
 .text {
@@ -60,17 +62,22 @@ ul {
 
 .signup {
     align-self: flex-start;
-    padding: 5px 15px;
+    padding: 8px 24px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    font-size: 16px;
 }
 
 .placeholder {
-    width: 300px;
-    height: 100px;
+    width: 480px;
+    height: 180px;
     padding: 30px;
-    background-color: aqua;
+    background-color: #787878;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 
@@ -81,6 +88,7 @@ ul {
     gap: 50px;
     margin-bottom: 50px;
     flex: 1;
+    padding: 40px;
 }
 
 .second-title {
